# c-ImageProcess

./: CMakeLists.txt  README.md  click.cpp  clickPress.cpp  color_detect.cpp  gaussianBlur_video.cpp  histogram_equal.cpp  histogram_equal_color.cpp  note.txt  read_image.cpp  save_image.cpp  tracking_object.cpp
basic/: CMakeLists.txt  hello.cpp
faiss/: CMakeLists.txt  main.cpp  vecto_faiss.cpp
lib-Cmake/: CMakeLists.txt  main.cpp
lib-system-Cmake/: CMakeLists.txt  main.cpp
lib-system-Cmake/lib/math/: CMakeLists.txt  operations.hpp
opencv-cplus/: CMakeLists.txt  DisplayImage.cpp  README.md  change_brightness.cpp  change_brightness_video.cpp  change_contrast_video.cpp  color_detect.cpp  color_detect_onlyRED.cpp  note.txt  read_multi_image.cpp  rotate.cpp  tracking_object.cpp  video.cpp
